<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/edit_customer_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/instant_occupation"
            android:textColor="@color/primaryTextColor"
            android:textSize="25sp"
            android:textStyle="bold" />
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:visibility="invisible"
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_dateFilter"
            app:layout_constraintBottom_toTopOf="@+id/swiperefresh"
            android:indeterminate="true"
            android:layout_marginBottom="5dp"
            android:progressTint="@color/secondaryColor"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/event_start_time" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/start_time_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingVertical="@dimen/padding__adaptable"
                        android:text="18:30"
                        android:textSize="@dimen/size__adaptable"
                        android:insetTop="0dp"
                        app:backgroundTint="@color/secondaryLightColor" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/end_time_layout"
                android:visibility="visible"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/event_end_time" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/end_time_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingVertical="@dimen/padding__adaptable"
                        android:text="18:30"
                        android:textSize="@dimen/size__adaptable"
                        android:insetTop="0dp"
                        app:backgroundTint="@color/secondaryLightColor" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/warning_dialog_cancel_bt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:padding="15dp"
                app:backgroundTint="@color/negative_red"
                android:background="@drawable/booking_cancel_item_table_background"
                android:backgroundTint="@color/red_transparent"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/cancel_text"
                android:textAllCaps="false"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/warning_dialog_ok_bt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:padding="15dp"
                android:background="@drawable/booking_confirm_item_table_background"
                android:backgroundTint="@color/blue_transparent"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:text="@string/occupy"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>