<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.settings.ui.SettingFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:columnCount="1"
                android:importantForAutofill="yes"
                android:useDefaultMargins="true">

                <LinearLayout
                    android:id="@+id/notificationLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/assign_table0"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="30"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/notificationTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Notifications"
                            android:textSize="25dp" />

                        <TextView
                            android:id="@+id/notificationsDescTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Mail notifications"
                            android:textSize="14dp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/userLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/assign_table0"

                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="30"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/userTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Users"
                            android:textSize="25dp" />

                        <TextView
                            android:id="@+id/userDescTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="User Info"
                            android:textSize="14dp" />
                    </LinearLayout>


                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ModuleLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/assign_table0"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="30"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/moduleTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/module"
                            android:textSize="25dp" />

                        <TextView
                            android:id="@+id/moduleDescTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Set Module"
                            android:textSize="14dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/apiLoginLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/assign_table0"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="30"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/apiLoginTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/api_url_and_key"
                            android:textSize="25dp" />

                        <TextView
                            android:id="@+id/apiLoginDescTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/api_url_and_key_desc"
                            android:textSize="14dp" />
                    </LinearLayout>


                </LinearLayout>



            </GridLayout>
        </RelativeLayout>
    </ScrollView>

</FrameLayout>